style.css
.red{
    color: #bb333d;
}
.green{
    color: #a0b464;
}
.greenText{
    color: #7b9e43;
}
.beige{
    color: #FCF2D7;
}
.brown{
    color: #635A4E;
}
.offWhite{
    color: #FFFBEF;
}

body {
    height: 100vh;
    width: 100vw;
    margin: 0;
    display: flex;
    flex-direction: column;
    font-family: 'Baloo 2', sans-serif;
    background-color: #FCF2D7;
    color: #635A4E;
}

/* titles for about/benefits/showcase */
h2 {
    color: #bb333d;
    font-family: 'Cormorant Garamond';
    font-size: 54px;
    writing-mode: vertical-rl;
    text-orientation: upright;

}

/* green header with logo and links */
.header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #a0b464;

}

.left-items{
    padding-left: 20px;
    display: flex;
    margin: 30px;
}

.right-links{
    padding-right: 20px;
    margin: 30px;
    display: flex;
    gap: 75px;
    font-size: 20px;
    
}

/* big quote area (midsection?) */
.main,
.main2 {
    font-size: 54px;
    margin: 100px;
    flex-wrap: wrap;
    display: flex;
    justify-content: center;
    font-weight: bold;
}

.main2 {
    font-size: 46px;
}



.quote {
    display: inline-block;
    text-align: center;
}
.quote {
    display: inline-block;
    width: fit-content;
    padding-right: 5px;
    white-space: nowrap;
    overflow: hidden;
    border-right: 5px solid #635A4E;
    animation: 
        typing 3.8s,
        cursor 0.8s step-end infinite alternate;
}

@keyframes cursor {
    50% { border-color: transparent; } 
}
@keyframes typing {
    from { width: 0%; }
    to { width: 76%; }
}

a {
    font-weight: bold;
    text-decoration: none;
    color: #FFFBEF;

}

/* list customization */

ul {
    list-style-position: outside;
    word-spacing: 5px;
    font-size: 18px;
    list-style: none;
    
}

/* before item list */
ul li::before {
    content: "✤ ";
    color: #bb333d;
    width: 1em;

}

/* hover text transition */
.hover-container {
    position: relative;
    width: 200px;
}

.hover-description {
    max-height: 0;
    overflow: hidden;
    transition: max-height 1.4s ease;
    text-align: justify; 
    
}

.hover-text {
    font-weight: 500;
    cursor: pointer;
}

.hover-container:hover .hover-description {
    max-height: 500px;
}

/* about and benefits   */
.about-benefits {

    display: flex;
    justify-content: space-around;
    padding-right: 150px;
    padding-left: 150px;
    gap: 0;
}

.about-div {
    margin: auto;
    display: flex;
    max-width: 500px;
    margin-left: 200px;
}
.benefits-div {
    margin-right: 400px;
    display: flex;
    max-width: 700px;
}

.listBenefits {
    display: flex;
    margin: auto;
    justify-content: center;

}

.about {
    margin: auto;
    text-align: justify; 
    font-size: 18px;;
}

/* container for matcha */

.showcase {
    display: flex;
    justify-content: space-around;
    margin: 50px;
    
}

.showcase-div {
    margin-inline-end: auto;
    display: flex;
    gap: 40px;
    align-items: center;

    max-width: 1800px;
    flex-wrap: wrap;
}

.matcha-description {
    display: flex;
    justify-content: center;
    align-items: left;
    flex-direction: column;
    
    
}
.container {
    display: flex;
    margin: auto;
    align-items: center;
}

.row-2 {
    padding-left: 202px;
    display: flex;
    margin: auto;
    align-items: center;
    gap: 60px;
    max-width: 1800px;
}

.product-name{
    text-align: center;
    width: 100%;
    font-weight: bold;
    font-size: 20px;
    
}
.attributes {
    padding-top: 10px;
    padding-left: 30px;
    padding-right: 30px;
    border: 2px solid #635A4E;
    display: flex;
    justify-content: center;
    flex-direction: column;
    max-width: 200px;
    max-width: 100%;
}

.stats-and-stars {
    display: flex;
}
.stats,
.stars {
    display: flex;
    flex-direction: column;
    padding: 20px;
}

.stats p,
.stars p {
    /* adjusts top and bottom margin negatively */
    margin: -1px 0; 
    font-weight: bold;
}



.description-title {
    display: flex;
    font-size: 20px;
}

.description {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    max-width: 400px;
    text-align: justify;
    
}

.buy a {
    color: #635A4E;
    border: 2px solid #635A4E;
    max-width: 100px;
    border-radius: 5px;
    text-align: center;
    padding: 0 10px;
}
/* footer */
.footer{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 50px;
    font-weight: bold;
    color: #FFFBEF;
    background-color: #bb333d;
}

